# hand_detect_recognition

./: CMakeLists.txt  hand_detect.cpp  hand_detect.h  hand_recognition.cpp  hand_recognition.h  main.cpp
